cmake_minimum_required(VERSION 3.5)

if(CMAKE_BUILD_TYPE MATCHES "Release")
SET(NCE_BUILD "Release")
endif()
if(CMAKE_BUILD_TYPE MATCHES "Debug")
SET(NCE_BUILD "Debug")
endif()

list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/third-party/modules)
message("${CMAKE_MODULE_PATH}")
if(CMAKE_SYSTEM_NAME MATCHES "Linux")
    SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_BINARY_DIR}/bin/)
    SET(LIBRARY_OUTPUT_PATH  ${PROJECT_BINARY_DIR}/lib/)
else(CMAKE_SYSTEM_NAME MATCHES "Windows")
    if(MSVC)
        SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_BINARY_DIR}/out/)
        SET(LIBRARY_OUTPUT_PATH  ${PROJECT_BINARY_DIR}/out/)
    endif()
endif()

SET(NCE_BUILD_PATH  ${CMAKE_CURRENT_SOURCE_DIR})
add_definitions(-DPLATFORM=${PLATFORM})

add_subdirectory("third-party")
add_subdirectory("nce_alg")
add_subdirectory("demo")